features addition: get tasks,add a new task,update status of existing task

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -29,7 +29,10 @@
       >
     </nav>
 
-    <section class="jumbotron">
+    <section id="main-section" class="jumbotron">
+      <h2 id="not-logged"></h2>
+      <a href="login.html" class="btn btn-secondary btn-sm">Login</a>
+      <br /><br />
       <div class="card container">
         <div class="card-body">
           <h4 id="add-title">Add a Task</h4>
