--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -53,7 +53,9 @@
                 id="password"
               />
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" id="login-submit">
+              Submit
+            </button>
           </form>
         </div>
       </div>
@@ -74,5 +76,6 @@
       integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
       crossorigin="anonymous"
     ></script>
+    <script src="login.js"></script>
   </body>
 </html>
