new Features: delete a task,logout and login-logout button fixes

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,7 +31,8 @@
 
     <section id="main-section" class="jumbotron">
       <h2 id="not-logged"></h2>
-      <a href="login.html" class="btn btn-secondary btn-sm">Login</a>
+      <a href="login.html" class="btn btn-success btn-sm" id="log-in">Login</a>
+      <button class="btn btn-danger btn-sm" id="log-out">Logout</button>
       <br /><br />
       <div class="card container">
         <div class="card-body">
@@ -143,6 +144,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="tasks.js"></script>
+
     <script src="app.js"></script>
   </body>
 </html>
