Minor styling fixes

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -20,6 +20,14 @@
       .pencil {
         float: right;
       }
+      #main-section {
+        margin-top: 0;
+        padding-top: 1rem;
+      }
+      #log-in,
+      #log-out {
+        margin-left: 2rem;
+      }
     </style>
   </head>
   <body>
@@ -30,7 +38,6 @@
     </nav>
 
     <section id="main-section" class="jumbotron">
-      <h2 id="not-logged"></h2>
       <a href="login.html" class="btn btn-success btn-sm" id="log-in">Login</a>
       <button class="btn btn-danger btn-sm" id="log-out">Logout</button>
       <br /><br />
